# portmap

./: .env.example  .gitignore  README.md  docker-compose.gateway.yml  docker-compose.mock.yml  docker-compose.yml  package-lock.json  package.json  portmap.toml  pyproject.toml  vite.config.js
.branch_logs/: 2026-06-02-portmap-gateway-catalog.md  dev.md  feat-catalog-compose-down-action.md  feat-docker-compose-plugin-shim.md  feat-endpoint-range-ports.md  feat-local-portmap-config.md  feat-multi-instance-compose-runtime.md  main.md
.branch_logs/branches/: feat-branch-tip-order.md  feat-catalog-compose-restart-action.md  feat-catalog-public-static.md  feat-catalog-worktree-start.md  feat-compose-readme-rules.md  feat-container-http-url-dns.md  feat-default-compose-name.md  feat-fronted.md  feat-host-agent.md  feat-host-dns-cli.md  feat-submodule-branch-display.md  feat-submodule-display-group.md  feat-submodule-worktree-icon.md  feat-submodule-worktree-path-display.md  feat-submodule-worktrees.md  feat-transparent-compose.md  feat-uv-tool-short-commands.md  feat-vite-catalog-ui.md  (+1 more)
.git-guard/: config.json  contribution.md  enable.sh  policy.json
docs/: architecture.md  todos.md
frontend/: index.html
frontend/src/: main.js  (+2 more)
gateway/: Corefile
tests/: test_broker.py  test_broker_shim.py  test_catalog.py  test_cli_lifecycle.py  test_compose_takeover.py  test_gateway_compose.py  test_gateway_corefile.py  test_host_dns.py  test_integration_test_repo.py  test_planner.py  test_registry.py  test_repo_identity.py  test_scaffold.py  test_settings.py  test_yaml_writer.py
(+48 files in other folders)
